namespace Core.Domain;

public enum OperationType
{
    MachineOperation,
    SendPanelToNextStation
}