namespace Desktop.Features.Boards.Domain;

public class Board
{
    public int Id { get; set; }
    public string SerialNumber { get; set; } = "";
}