namespace Domain.Core.Types;

public enum OperationResultType
{
    Unknown,
    Pass,
    Fail,
}