@startuml

class Operation {
    DateTime StartTime
    DateTime EndTime
}
Operation *--> OperationType
Operation *--> OperationResultType
Operation --> "?" Logfile

enum OperationType {
    UploadToSfc
}

enum OperationResultType {
    Success
    Failure
}

class Panel
Panel --> "+" Board
Panel o--> "*" Operation

class Board
Board o--> "*" Defect

@enduml